2019xcor. compact Rxy and Sxy results

--- a/2019xcor/randseq.tex
+++ b/2019xcor/randseq.tex
@@ -187,160 +187,160 @@
 %    \brs{\begin{array}{cc}6&8\\10&12\end{array}}
 %   $
 %\end{remark}
-
-%---------------------------------------
-\begin{proposition}
-\label{prop:Rxynmm}
-\label{prop:Rxxnmm}
-%---------------------------------------
-Let $\rvy(n)$ be a \fncte{random sequence},
-    $\rvx(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
-and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
-\propbox{
-  \brb{\begin{array}{M}
-    $\rvx$ and $\rvy$ are
-    \\\prope{wide sense stationary}
-    \\(\prope{WSS}) \xref{def:wss}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{rcll}
-    \Rxx(n,m) &=& \Rxx(m) & \forall n\in\Z\\
-    \Rxy(n,m) &=& \Rxy(m) & \forall n\in\Z\\
-    \text{\xref{def:Rxynm}} && \text{\xref{def:Rxym}}
-  \end{array}}
-}
-\end{proposition}
-\begin{proof}
-\begin{align*}
-  \Rxy(n,m)
-     &\eqd \pE\brs{\rvx[n+m]\rvy^\ast[n]}
-     &&    \text{by definition of $\Rxy(n,m)$}
-     &&    \text{\xref{def:Rxynm}}
-   \\&=    \pE\brs{\rvx[n-n+m]\rvy^\ast[n-n]}
-     &&    \text{by \prope{wide sense stationary} hypothesis}
-   \\&=    \pE\brs{\rvx[m]\rvy^\ast[0]}
-   \\&\eqd \Rxy(m)
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxym}}
-   \\
-  \Rxx(n,m)
-     &=    \brlr{\Rxy(n,m)}_{\rvy=\rvx}
-   \\&=    \brlr{\Rxy(m)}_{\rvy=\rvx}
-     && \text{by previous result}
-   \\&= \Rxx(m)
-\end{align*}
-\end{proof}
-
-
-\begin{figure}[ht]\color{figcolor}
-\centering%
-\setlength{\unitlength}{0.08mm}
-\begin{tabular}{*{3}{c@{\hspace{1cm}}}c}
-$\Real{\Rxx(m)}$ & $\Imag{\Rxx(m)}$ & $|\Rxx(m)|$ & $\angle\Rxx(m)$
-\\
-\begin{picture}(340,300)(-150,-150)
-  %\graphpaper[10](0,0)(600,200)
-  \thicklines%
-  \color{figcolor}%
-  \put(-150,   0){\line(1,0){300} }
-  \put(   0,-150){\line(0,1){300} }
-  \put( 160,   0){\makebox(0,0)[l]{$f$} }
-  \put(-100,   0){\line( 1,1){100} }
-  \put( 100,   0){\line(-1,1){100} }
-\end{picture}
-&
-\begin{picture}(340,300)(-150,-150)
-  \thicklines%
-  \color{figcolor}%
-  \put(-150,   0){\line(1,0){300} }
-  \put(   0,-150){\line(0,1){300} }
-  \put( 160,   0){\makebox(0,0)[l]{$f$} }
-  \qbezier(0,0)( 20, 80)( 100, 100)
-  \qbezier(0,0)(-20,-80)(-100,-100)
-  \put( 100,   0){\line(0, 1){100} }
-  \put(-100,   0){\line(0,-1){100} }
-\end{picture}
-&
-\begin{picture}(340,300)(-150,-150)
-  \thicklines%
-  \color{figcolor}%
-  \put(-150,   0){\line(1,0){300} }
-  \put(   0,-150){\line(0,1){300} }
-  \put( 160,   0){\makebox(0,0)[l]{$f$} }
-  \qbezier(0,100)( 20,20)( 100, 0)
-  \qbezier(0,100)(-20,20)(-100, 0)
-\end{picture}
-&
-\begin{picture}(340,300)(-150,-150)
-  \thicklines%
-  \color{figcolor}%
-  \put(-150,   0){\line(1,0){300} }
-  \put(   0,-150){\line(0,1){300} }
-  \put( 160,   0){\makebox(0,0)[l]{$f$} }
-  \put( 100,   0){\line(0, 1){100} }
-  \put(-100,   0){\line(0,-1){100} }
-  \put(-100,-100){\line(1, 1){200} }
-\end{picture}
-\\
-(\prope{symmetric}) & (\prope{anti-symmetric}) & (\prope{symmetric}) & (\prope{anti-symmetric})
-\end{tabular}
-\caption{
-   \fncte{auto-correlation} $\Rxx(m)$
-   \label{fig:Rxxm}
-   }
-\end{figure}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:Rxxm}
-\label{cor:Rxym}
-%---------------------------------------
-Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
-    $\rvy(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Ryy(n,m)$,
-and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
-Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
-\corbox{
-  \brb{\begin{array}{FMD}
-      (A).&$\rvx$ is \prope{WSS} & and
-    \\(B).&$\rvy$ is \prope{WSS} & and
-    \\(C).&$\opS$ is \prope{LTI} &
-  \end{array}}
-  \implies
-  \brb{\begin{array}{Frc>{\ds}lDD}
-      (1).&      \Rxy(m) &=&       \Ryx^\ast(-m)  &                               & and
-    \\(2).&      \Rxx(m) &=&       \Rxx^\ast(-m)  & (\prope{conjugate symmetric}) & and
-    \\(3).&\Real \Rxx(m) &=& \Real \Rxx     (-m)  & (\prope{symmetric})           & and
-    \\(4).&\Imag \Rxx(m) &=&-\Imag \Rxx     (-m)  & (\prope{anti-symmetric})      & and
-    \\(5).&\abs{ \Rxx(m)}&=& \abs{ \Rxx     (-m)} & (\prope{symmetric})           & and
-    \\(6).&\angle\Rxx(m) &=&-\angle\Rxx     (-m)  & (\prope{anti-symmetric})      &
-  \end{array}}
-}
-\end{corollary}
-\begin{proof}
-\begin{align*}
-  \Rxy(m)
-     &= \Rxy(n,m)
-     && \text{by \prefp{prop:Rxynmm}}
-     && \text{and hypotheses (A),(B)}
-   \\&= \Ryx^\ast(n+m,-m)
-     && \text{by \prefp{thm:Rxynm}}
-     && \text{and hypothesis (B)}
-   \\&= \Ryx^\ast(-m)
-     && \text{by \prefp{prop:Rxynmm}}
-     && \text{and hypothesis (A)}
-   \\
-  \Rxx(m)
-     &= \Rxx(n,m)
-     && \text{by \prefp{prop:Rxynmm}}
-     && \text{and hypothesis (A)}
-   \\&= \Rxx^\ast(n+m,-m)
-     && \text{by \prefp{thm:Rxynm}}
-     && \text{and hypothesis (B)}
-   \\&= \Rxx^\ast(-m)
-     && \text{by \prefp{prop:Rxynmm}}
-     && \text{and hypothesis (A)}
-\end{align*}
-\end{proof}
+%20190502%
+%20190502%%---------------------------------------
+%20190502%\begin{proposition}
+%20190502%\label{prop:Rxynmm}
+%20190502%\label{prop:Rxxnmm}
+%20190502%%---------------------------------------
+%20190502%Let $\rvy(n)$ be a \fncte{random sequence},
+%20190502%    $\rvx(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
+%20190502%and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
+%20190502%\propbox{
+%20190502%  \brb{\begin{array}{M}
+%20190502%    $\rvx$ and $\rvy$ are
+%20190502%    \\\prope{wide sense stationary}
+%20190502%    \\(\prope{WSS}) \xref{def:wss}
+%20190502%  \end{array}}
+%20190502%  \implies
+%20190502%  \brb{\begin{array}{rcll}
+%20190502%    \Rxx(n,m) &=& \Rxx(m) & \forall n\in\Z\\
+%20190502%    \Rxy(n,m) &=& \Rxy(m) & \forall n\in\Z\\
+%20190502%    \text{\xref{def:Rxynm}} && \text{\xref{def:Rxym}}
+%20190502%  \end{array}}
+%20190502%}
+%20190502%\end{proposition}
+%20190502%\begin{proof}
+%20190502%\begin{align*}
+%20190502%  \Rxy(n,m)
+%20190502%     &\eqd \pE\brs{\rvx[n+m]\rvy^\ast[n]}
+%20190502%     &&    \text{by definition of $\Rxy(n,m)$}
+%20190502%     &&    \text{\xref{def:Rxynm}}
+%20190502%   \\&=    \pE\brs{\rvx[n-n+m]\rvy^\ast[n-n]}
+%20190502%     &&    \text{by \prope{wide sense stationary} hypothesis}
+%20190502%   \\&=    \pE\brs{\rvx[m]\rvy^\ast[0]}
+%20190502%   \\&\eqd \Rxy(m)
+%20190502%     && \text{by definition of $\Rxy(m)$}
+%20190502%     && \text{\xref{def:Rxym}}
+%20190502%   \\
+%20190502%  \Rxx(n,m)
+%20190502%     &=    \brlr{\Rxy(n,m)}_{\rvy=\rvx}
+%20190502%   \\&=    \brlr{\Rxy(m)}_{\rvy=\rvx}
+%20190502%     && \text{by previous result}
+%20190502%   \\&= \Rxx(m)
+%20190502%\end{align*}
+%20190502%\end{proof}
+%20190502%
+%20190502%
+%20190502%\begin{figure}[ht]\color{figcolor}
+%20190502%\centering%
+%20190502%\setlength{\unitlength}{0.08mm}
+%20190502%\begin{tabular}{*{3}{c@{\hspace{1cm}}}c}
+%20190502%$\Real{\Rxx(m)}$ & $\Imag{\Rxx(m)}$ & $|\Rxx(m)|$ & $\angle\Rxx(m)$
+%20190502%\\
+%20190502%\begin{picture}(340,300)(-150,-150)
+%20190502%  %\graphpaper[10](0,0)(600,200)
+%20190502%  \thicklines%
+%20190502%  \color{figcolor}%
+%20190502%  \put(-150,   0){\line(1,0){300} }
+%20190502%  \put(   0,-150){\line(0,1){300} }
+%20190502%  \put( 160,   0){\makebox(0,0)[l]{$f$} }
+%20190502%  \put(-100,   0){\line( 1,1){100} }
+%20190502%  \put( 100,   0){\line(-1,1){100} }
+%20190502%\end{picture}
+%20190502%&
+%20190502%\begin{picture}(340,300)(-150,-150)
+%20190502%  \thicklines%
+%20190502%  \color{figcolor}%
+%20190502%  \put(-150,   0){\line(1,0){300} }
+%20190502%  \put(   0,-150){\line(0,1){300} }
+%20190502%  \put( 160,   0){\makebox(0,0)[l]{$f$} }
+%20190502%  \qbezier(0,0)( 20, 80)( 100, 100)
+%20190502%  \qbezier(0,0)(-20,-80)(-100,-100)
+%20190502%  \put( 100,   0){\line(0, 1){100} }
+%20190502%  \put(-100,   0){\line(0,-1){100} }
+%20190502%\end{picture}
+%20190502%&
+%20190502%\begin{picture}(340,300)(-150,-150)
+%20190502%  \thicklines%
+%20190502%  \color{figcolor}%
+%20190502%  \put(-150,   0){\line(1,0){300} }
+%20190502%  \put(   0,-150){\line(0,1){300} }
+%20190502%  \put( 160,   0){\makebox(0,0)[l]{$f$} }
+%20190502%  \qbezier(0,100)( 20,20)( 100, 0)
+%20190502%  \qbezier(0,100)(-20,20)(-100, 0)
+%20190502%\end{picture}
+%20190502%&
+%20190502%\begin{picture}(340,300)(-150,-150)
+%20190502%  \thicklines%
+%20190502%  \color{figcolor}%
+%20190502%  \put(-150,   0){\line(1,0){300} }
+%20190502%  \put(   0,-150){\line(0,1){300} }
+%20190502%  \put( 160,   0){\makebox(0,0)[l]{$f$} }
+%20190502%  \put( 100,   0){\line(0, 1){100} }
+%20190502%  \put(-100,   0){\line(0,-1){100} }
+%20190502%  \put(-100,-100){\line(1, 1){200} }
+%20190502%\end{picture}
+%20190502%\\
+%20190502%(\prope{symmetric}) & (\prope{anti-symmetric}) & (\prope{symmetric}) & (\prope{anti-symmetric})
+%20190502%\end{tabular}
+%20190502%\caption{
+%20190502%   \fncte{auto-correlation} $\Rxx(m)$
+%20190502%   \label{fig:Rxxm}
+%20190502%   }
+%20190502%\end{figure}
+%20190502%
+%20190502%%---------------------------------------
+%20190502%\begin{corollary}
+%20190502%\label{cor:Rxxm}
+%20190502%\label{cor:Rxym}
+%20190502%%---------------------------------------
+%20190502%Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
+%20190502%    $\rvy(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Ryy(n,m)$,
+%20190502%and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
+%20190502%Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
+%20190502%\corbox{
+%20190502%  \brb{\begin{array}{FMD}
+%20190502%      (A).&$\rvx$ is \prope{WSS} & and
+%20190502%    \\(B).&$\rvy$ is \prope{WSS} & and
+%20190502%    \\(C).&$\opS$ is \prope{LTI} &
+%20190502%  \end{array}}
+%20190502%  \implies
+%20190502%  \brb{\begin{array}{Frc>{\ds}lDD}
+%20190502%      (1).&      \Rxy(m) &=&       \Ryx^\ast(-m)  &                               & and
+%20190502%    \\(2).&      \Rxx(m) &=&       \Rxx^\ast(-m)  & (\prope{conjugate symmetric}) & and
+%20190502%    \\(3).&\Real \Rxx(m) &=& \Real \Rxx     (-m)  & (\prope{symmetric})           & and
+%20190502%    \\(4).&\Imag \Rxx(m) &=&-\Imag \Rxx     (-m)  & (\prope{anti-symmetric})      & and
+%20190502%    \\(5).&\abs{ \Rxx(m)}&=& \abs{ \Rxx     (-m)} & (\prope{symmetric})           & and
+%20190502%    \\(6).&\angle\Rxx(m) &=&-\angle\Rxx     (-m)  & (\prope{anti-symmetric})      &
+%20190502%  \end{array}}
+%20190502%}
+%20190502%\end{corollary}
+%20190502%\begin{proof}
+%20190502%\begin{align*}
+%20190502%  \Rxy(m)
+%20190502%     &= \Rxy(n,m)
+%20190502%     && \text{by \prefp{prop:Rxynmm}}
+%20190502%     && \text{and hypotheses (A),(B)}
+%20190502%   \\&= \Ryx^\ast(n+m,-m)
+%20190502%     && \text{by \prefp{thm:Rxynm}}
+%20190502%     && \text{and hypothesis (B)}
+%20190502%   \\&= \Ryx^\ast(-m)
+%20190502%     && \text{by \prefp{prop:Rxynmm}}
+%20190502%     && \text{and hypothesis (A)}
+%20190502%   \\
+%20190502%  \Rxx(m)
+%20190502%     &= \Rxx(n,m)
+%20190502%     && \text{by \prefp{prop:Rxynmm}}
+%20190502%     && \text{and hypothesis (A)}
+%20190502%   \\&= \Rxx^\ast(n+m,-m)
+%20190502%     && \text{by \prefp{thm:Rxynm}}
+%20190502%     && \text{and hypothesis (B)}
+%20190502%   \\&= \Rxx^\ast(-m)
+%20190502%     && \text{by \prefp{prop:Rxynmm}}
+%20190502%     && \text{and hypothesis (A)}
+%20190502%\end{align*}
+%20190502%\end{proof}
 
 %%=======================================
 %\subsection{Spectral density}
@@ -405,7 +405,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &\eqd \opZ \Ryx(m)
     && \text{by definition of $\ZSxy(z)$}
     && \text{\xref{def:csd}}
-  \\&\eqd \sum_{m\in\Z} Ryx(m) z^{-m}
+  \\&\eqd \sum_{m\in\Z}\Ryx(m) z^{-m}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\&\eqd \sum_{m\in\Z} \Rxy^\ast(-m) z^{-m}
@@ -457,7 +457,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
    \\&= \brlr{\ZSyx^{\ast\ast}\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-     && \text{by \prefp{cor:ZSxy}}
+     && \text{by \prefp{thm:ZSxy_sym}}
    \\&= \brlr{\ZSyx\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
      && \text{by \prope{involutory} property of \structd{$\invo$-algebra}s}
      && \text{\xref{def:staralg}}
@@ -472,7 +472,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
    \\&= \brlr{\ZSxx^{\ast\ast}\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-     && \text{by \prefp{cor:ZSxy}}
+     && \text{by \prefp{thm:ZSxy_sym}}
    \\&= \brlr{\ZSxx\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
      && \text{by \prope{involutory} property of \structd{$\invo$-algebra}s}
      && \text{\xref{def:staralg}}
