--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -410,24 +410,20 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \begin{align*}
   \ZSyx(z)
      &\eqd \opZ \Ryx(m)
-    && \text{by definition of $\ZSxy(z)$}
-    && \text{\xref{def:csd}}
-  \\&\eqd \sum_{m\in\Z} Ryx(m) z^{-m}
-    && \text{by definition of $\opZ$}
-    && \text{\xref{def:opZ}}
+    && \text{by definition of $\ZSxy(z)$}                          && \text{\xref{def:csd}}
+  \\&\eqd \sum_{m\in\Z}\Ryx(m) z^{-m}                              
+    && \text{by definition of $\opZ$}                              && \text{\xref{def:opZ}}
   \\&\eqd \sum_{m\in\Z} \Rxy^\ast(-m) z^{-m}
     && \text{by \prefp{cor:Rxym}}
   \\&= \brs{\sum_{m\in\Z} \Rxy(-m) (z^\ast)^{-m}}^\ast
+    && \text{by \prope{antiautomorphic} property of *-algebras}    && \text{\xref{def:staralg}}
   \\&= \brs{\sum_{-p\in\Z} \Rxy(p) (z^\ast)^{p}}^\ast
-    && \text{where $p\eqd -m$}
-    && \text{$\implies$ $m=-p$}
+    && \text{where $p\eqd -m$}                                     && \text{$\implies$ $m=-p$}
   \\&= \brs{\sum_{p\in\Z} \Rxy(p) (z^\ast)^{p}}^\ast
-    && \text{by \prope{absolutely summable} property}
-    && \text{\xref{def:spllR}}
+    && \text{by \prope{absolutely summable} property}              && \text{\xref{def:spllR}}
   \\&= \brs{\sum_{p\in\Z} \Rxy(p) \brp{\frac{1}{z^\ast}}^{-p}}^\ast
   \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}}
-    && \text{by definition of $\opZ$}
-    && \text{\xref{def:opZ}}
+    && \text{by definition of $\opZ$}                              && \text{\xref{def:opZ}}
   \\
   \ZSxx(z)
     &= \brlr{\ZSxy(z)}_{\rvy=\rvx}
@@ -464,7 +460,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
    \\&= \brlr{\ZSyx^{\ast\ast}\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-     && \text{by \prefp{cor:ZSxy}}
+     && \text{by \prefp{thm:ZSxy_sym}}
    \\&= \brlr{\ZSyx\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
      && \text{by \prope{involutory} property of \structd{$\invo$-algebra}s}
      && \text{\xref{def:staralg}}
@@ -479,7 +475,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
    \\&= \brlr{\ZSxx^{\ast\ast}\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-     && \text{by \prefp{cor:ZSxy}}
+     && \text{by \prefp{thm:ZSxy_sym}}
    \\&= \brlr{\ZSxx\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
      && \text{by \prope{involutory} property of \structd{$\invo$-algebra}s}
      && \text{\xref{def:staralg}}
