--- a/2019xcor/intro.tex
+++ b/2019xcor/intro.tex
@@ -2,4 +2,22 @@
 % Daniel J. Greenhoe
 % XeLaTeX / LaTeX file
 %============================================================================
+%=======================================
+\section{Introduction}
+%=======================================
+In the literature, there are varying and in general incompatible definitions of
+\fncte{cross-correlation} functions $\Rxy(n,m)$ and its \ope{wide-sense stationary} special case $\Rxy(m)$. % \xxref{def:Rxynm}{def:Rxym}.
+The choice of definitions has consequences for results involving the \fncte{cross-spectral density} function
+$\Swxy(\omega)$, %\xref{def:Swxy}.
+which is defined as the \ope{Discrete-time Fourier Transform} of $\Rxy(m)$,
+as well as the more general $\Szxy(z)$,
+which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
+\begin{definition}\label{def:Swxy}\label{def:Szxy}
+\defbox{
+  \Szxy(z)       \eqd \opZ\Rxy(m) \eqd \sum_{m\in\Z}\Rxy(m) z^{-m}
+  \qquad\qquad
+  \Swxy(\omega) \eqd \opDTFT\Rxy(m) \eqd \sum_{m\in\Z}\Rxy(m) e^{-i\omega m}
+  }
+\end{definition}
+
 
